examples/misc/error/compilation/eval_unexpected-index.bfr
codegen [
  $build {
    a: array(3) { i: index }
  }
  . a:i
]